--- a/appendix_b.Rmd
+++ b/appendix_b.Rmd
@@ -15,39 +15,45 @@ The validation plots including the statistics for each site are available via th
 
 <br>
 
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: #2481AA;
-  float: left;
-  width: 16.6667%;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 14px;
-  color: #FFFFFF;
-  font-weight: bold;
-}
-</style>
-</head>
-<body>
+## Model Generation {.panelset} {.unnumbered}
 
-<div class="tab">
-  <button class="tablinks" onclick="opentab(event, 'GEN0')"id="defaultOpen">GEN 0</button>
-  <button class="tablinks" onclick="opentab(event, 'GEN1')">GEN 1</button>
-  <button class="tablinks" onclick="opentab(event, 'GEN15')">GEN 1.5</button>
-  <button class="tablinks" onclick="opentab(event, 'GEN2')">GEN 2</button>
-  <button class="tablinks" onclick="opentab(event, 'MULTI')">MULTI</button>
-  <button class="tablinks" onclick="opentab(event, 'WAVE')">WAVE</button>
-</div>
+### GEN 2
+ 
+HCHB *Generaton 2.0*
+
+```{r A-testing3, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+library(stringr)
+
+theSheet_Names <- list.files(path = "HTML/Performance/GEN2/HTML", pattern = NULL, all.files = FALSE,
+           full.names = FALSE, recursive = FALSE,
+           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
+
+theSheet_Names2 <- list.files(path = "HTML/Performance/TRAN/HTML", pattern = NULL, all.files = FALSE,
+           full.names = FALSE, recursive = FALSE,
+           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
+
+theSheet <- paste(
+  "<",'a href="HTML/Performance/GEN2/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">",",",
+  "<",'a href="HTML/Performance/TRAN/HTML/',theSheet_Names2,'"',">",theSheet_Names2,"<",'/a',">",
+  sep = "")
+
+theSheet <- str_split_fixed(theSheet, ',', 2)
 
 
-<div id="GEN0" class="tabcontent">
-<p> 
+kbl(theSheet, caption = "Model results for Generation 2 nWV nSDG", align = "l",escape = F,col.names = c("Generation 2 2017 2022","Generation 2 2017 2022 (Transect)"), ) %>%
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = T,font_size = 10) %>%
+    scroll_box(fixed_thead = FALSE)
+```
+
+
+
+### GEN 0
+
 HCHB *Generaton 0*
 
 ```{r A-testing, echo=FALSE, message=FALSE, warning=FALSE}
@@ -66,11 +72,10 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
     scroll_box(fixed_thead = FALSE)
 ```
 
-</p>
-</div>
 
-<div id="GEN1" class="tabcontent">
-<p> 
+
+### GEN 1
+
 HCHB *Generaton 1*
 
 ```{r A-testing1, echo=FALSE, message=FALSE, warning=FALSE}
@@ -89,11 +94,10 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
     scroll_box(fixed_thead = FALSE)
 ```
 
-</p>
-</div>
 
-<div id="GEN15" class="tabcontent">
-<p> 
+
+### GEN 1.5
+ 
 HCHB *Generaton 1.5*
 
 ```{r A-testing2, echo=FALSE, message=FALSE, warning=FALSE}
@@ -127,47 +131,14 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
     scroll_box(fixed_thead = FALSE)
 ```
 
-</p>
-</div>
-
-<div id="GEN2" class="tabcontent">
-<p> 
-HCHB *Generaton 2.0*
-
-```{r A-testing3, echo=FALSE, message=FALSE, warning=FALSE}
-library(knitr)
-library(kableExtra)
-library(readxl)
-library(rmarkdown)
-library(stringr)
-
-theSheet_Names <- list.files(path = "HTML/Performance/GEN2/HTML", pattern = NULL, all.files = FALSE,
-           full.names = FALSE, recursive = FALSE,
-           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-
-theSheet_Names2 <- list.files(path = "HTML/Performance/TRAN/HTML", pattern = NULL, all.files = FALSE,
-           full.names = FALSE, recursive = FALSE,
-           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-
-theSheet <- paste(
-  "<",'a href="HTML/Performance/GEN2/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">",",",
-  "<",'a href="HTML/Performance/TRAN/HTML/',theSheet_Names2,'"',">",theSheet_Names2,"<",'/a',">",
-  sep = "")
-
-theSheet <- str_split_fixed(theSheet, ',', 2)
 
 
-kbl(theSheet, caption = "Model results for Generation 2 nWV nSDG", align = "l",escape = F,col.names = c("Generation 2 2017 2022","Generation 2 2017 2022 (Transect)"), ) %>%
-row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
-  kable_styling(full_width = T,font_size = 10) %>%
-    scroll_box(fixed_thead = FALSE)
-```
 
-</p>
-</div>
 
-<div id="MULTI" class="tabcontent">
-<p> 
+
+
+### MULTI
+ 
 HCHB *Model Comparisons*
 
 ```{r A-testing5, echo=FALSE, message=FALSE, warning=FALSE}
@@ -188,11 +159,10 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
     scroll_box(fixed_thead = FALSE)
 ```
 
-</p>
-</div>
 
-<div id="WAVE" class="tabcontent">
-<p> 
+
+### WAVE
+
 HCHB *Wave Comparisons*
 
 ```{r A-testing6, echo=FALSE, message=FALSE, warning=FALSE}
@@ -212,30 +182,11 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
     scroll_box(fixed_thead = FALSE)
 
 ```
-</p>
-</div>
 
 
 
-<script>
-function opentab(evt, tabName) {
-  var i, tabcontent, tablinks;
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-  document.getElementById(tabName).style.display = "block";
-  evt.currentTarget.className += " active";
-}
-document.getElementById("defaultOpen").click();
-</script>
 
-</body>
-<p> </p>
+
 
 <br>
 
