--- a/appendix_b.Rmd
+++ b/appendix_b.Rmd
@@ -15,9 +15,9 @@ The validation plots including the statistics for each site are available via th
 
 <br>
 
-## Model Generation {.panelset} {.unnumbered}
+## Model Generation {.panelset} 
 
-### GEN 2
+### GEN 2 {.unnumbered}
  
 HCHB *Generaton 2.0*
 
@@ -52,7 +52,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 
 
-### GEN 0
+### GEN 0 {.unnumbered}
 
 HCHB *Generaton 0*
 
@@ -74,7 +74,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 
 
-### GEN 1
+### GEN 1 {.unnumbered}
 
 HCHB *Generaton 1*
 
@@ -96,7 +96,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 
 
-### GEN 1.5
+### GEN 1.5 {.unnumbered}
  
 HCHB *Generaton 1.5*
 
@@ -137,7 +137,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 
 
-### MULTI
+### MULTI {.unnumbered}
  
 HCHB *Model Comparisons*
 
@@ -161,7 +161,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 
 
-### WAVE
+### WAVE {.unnumbered}
 
 HCHB *Wave Comparisons*
 
