--- a/appendix_b.Rmd
+++ b/appendix_b.Rmd
@@ -15,7 +15,7 @@ The validation plots including the statistics for each site are available via th
 
 <br>
 
-## Model Generation {.panelset.unnumbered} 
+## Model Generation {.panelset} \ {-}
 
 ### GEN 2 {.unnumbered}
  
