another try at ref in table

--- a/references/Habitat.bib
+++ b/references/Habitat.bib
@@ -30,7 +30,7 @@ DOI={10.3389/fenvs.2022.796623},
 	
 ISSN={2296-665X},   
    
-ABSTRACT={Freshwater flows to estuaries shape habitat, transport nutrients to drive productivity, and generate a salinity gradient that impacts water quality and provides spawning cues for fish. The aim of this study was to quantify how environmental flows improved outcomes for a coastal lagoon system (the Coorong, South Australia), considering the export, and prevention of ingress, of salt from the system, and the increased available habitat for key fish biota. A hydrodynamic model was used to simulate salinity and water temperature, and to determine the salt exchange between the Coorong and ocean for the observed conditions with environmental water release included. Scenario simulations showed that maintaining river flow is shown to arrest salt intrusion from the ocean into the Coorong. Without environmental water, the net import of salt into the Coorong would have been considerably greater, ranging between 1.86 million tonnes in 2018–19 to approximately 2.33 million tonnes in 2019–20. The fresher conditions created by environmental water provision supported a considerable expansion of suitable fish habitat area, derived from a simple habitat index based on salinity and water temperature. Without environmental water the habitat suitable for mulloway would have contracted by 38% over the 3 year investigation period. A similar trend is evident for black bream, Tamar goby, greenback flounder, yelloweye mullet, congolli and smallmouth hardyhead. The results highlighted the importance of cumulative benefits from delivering environmental water over multiple years, with different results obtained if the environmental water provided regularly or just focused over a single year. The approach used in this work to relate hydrological changes from water management to indicators of habitat suitability through changes to physical attributes provides information to inform the evaluation of environmental watering, as well as a tool to support future decision making to maximise the benefits from this precious resource.}
+ABSTRACT={Freshwater flows to estuaries shape habitat, transport nutrients to drive productivity, and generate a salinity gradient that impacts water quality and provides spawning cues for fish. The aim of this study was to quantify how environmental flows improved outcomes for a coastal lagoon system (the Coorong, South Australia), considering the export, and prevention of ingress, of salt from the system, and the increased available habitat for key fish biota. A hydrodynamic model was used to simulate salinity and water temperature, and to determine the salt exchange between the Coorong and ocean for the observed conditions with environmental water release included. Scenario simulations showed that maintaining river flow is shown to arrest salt intrusion from the ocean into the Coorong. Without environmental water, the net import of salt into the Coorong would have been considerably greater, ranging between 1.86 million tonnes in 2018–19 to approximately 2.33 million tonnes in 2019–20. The fresher conditions created by environmental water provision supported a considerable expansion of suitable fish habitat area, derived from a simple habitat index based on salinity and water temperature. Without environmental water the habitat suitable for mulloway would have contracted by 38% over the 3 year investigation period. A similar trend is evident for black bream, Tamar goby, greenback flounder, yelloweye mullet, congolli and smallmouth hardyhead. The results highlighted the importance of cumulative benefits from delivering environmental water over multiple years, with different results obtained if the environmental water provided regularly or just focused over a single year. The approach used in this work to relate hydrological changes from water management to indicators of habitat suitability through changes to physical attributes provides information to inform the evaluation of environmental watering, as well as a tool to support future decision making to maximise the benefits from this precious resource.}
 }
 
 @article{kim2013,
@@ -70,7 +70,7 @@ abstract = {This study examines the influence of salinity on the germination of 
 	doi = {10.4225/08/585AC4318B01F},
 	url = {https://publications.csiro.au/publications/publication/PIprocite:460cc125-b6bc-4d85-9221-dfc1ba5a5c29}
 }
-@report{Asano2020,
+@report{asano2020,
 	title = {The growth of aquatic macrophytes (Ruppia tuberosa spp. and Althenia cylindrocarpa) and the filamentous algal community in the southern Coorong},
 	author = {Asanopoulos,C. and Waycott, M.},
 	year = {2020},
@@ -163,4 +163,30 @@ title = {Effects of hyper-saline conditions upon six estuarine fish species from
 	doi = {10.3354/meps279081},
 	url = {http://dx.doi.org/10.3354/meps279081},
 	langid = {en}
+}
+@article{brock1982, 
+year = {1982}, 
+title = {{Biology of the salinity tolerant genus Ruppia L. in saline lakes in South Australia II. Population ecology and reproductive biology}}, 
+author = {Brock, Margaret A.}, 
+journal = {Aquatic Botany}, 
+issn = {0304-3770}, 
+doi = {10.1016/0304-3770(82)90063-8}, 
+abstract = {{This paper is the second in a series reporting a study of the genus Ruppia in South Australia. Two of the species of Ruppia found in South Australia, R. polycarpa Mason and R. tuberosa Davis and Tomlinson are found primarily in temporary salt lakes and exhibit annual life cycles. A third species, R. megacarpa Mason is perennial and is found only in permanent waters. The differences in the life cycles and reproductive biology of these species are considered in this paper.The standing crop of the annual species was always considerably less than that of the perennial: in Littl Dip Lake R. megacarpa communities had 410 g m−2 DW (grams per square metre dry weight) of total plant matter (282 g m−2 DW of R. megacarpa) in November 1977 whereas the annual population of the R. tuberosa) community had a standing crop of 11.7 g m−2 DW (3.3 g m−2 DW of R. tuberosa). Although these values varied with season and the salinity, depth and permanence of habitats, the difference between annuals and perennials held. Standing crop and time of seasonal maximum and minimum values showed further differences between annual and perennial life cycles: in Little Dip Lake ranges were 103 (September)-383 (November) g m−2 DW for R. megacarpa and 1.6 (June)-99.0 (September) g m−2 DW for R. tuberosa. R. polycarpa ranged from 4.2 (June) to 60.0 (September) g m−2 DW in a comparable habitat, Blue-Green Algal Pool.Partitioning of Ruppia into plant parts reveals differences between annual and perennial forms as well as seasonal differences within each life cycle. In the perennial, reproductive parts (flowers and seeds) always comprise only a small part of the total dry weight, whereas in the two annual species the proportion of reproductive parts (flowers, seeds and turions) is higher in all seasons. Even when vegetative growth of annuals is at its maximum the percentage of dry weight accounted for by reproductive parts is higher than at any stage in the life cycle of the perennial. Both seeds and asexual turions play a major role in propagating the annual species. The perennial spreads mainly by rhizomes.Turions are produced by both R. polycarpa and R. tuberosa in Australia. Two structural types of turions were found on R. tuberosa and only one of these on R. polycarpa. The anatomy and role of these organs in propagation are considered.}}, 
+pages = {249--268}, 
+volume = {13}, 
+keywords = {}
+}
+
+@article{santa1998, 
+year = {1998}, 
+title = {{The effect of temperature on the photosynthesis, growth and reproduction of a Mediterranean submerged macrophyte, Ruppia drepanensis}}, 
+author = {Santamarı́a, Luis and Hootsmans, Michiel J M}, 
+journal = {Aquatic Botany}, 
+issn = {0304-3770}, 
+doi = {10.1016/s0304-3770(97)00050-8}, 
+abstract = {{The effect of different temperatures (14, 20 and 30°C) and photoperiods (10 and 16 h) on the photosynthesis, growth and reproduction of Ruppia drepanensis Tineo plants from the Doñana National Park (SW Spain) were studied. After 84–91 days of growth under a 16 h photoperiod, the plants showed maximal biomass yield at 20°C (395 mg ash-free dry weight per plant), with lower yields at 14 and 30°C (216 and 284 mg ash-free dry weight per plant respectively). A short photoperiod resulted in a lower biomass yield when combined with low temperatures (59 mg afdw per plant, at 10 h and 14°C). Reproduction was also optimal at 20°C, while low temperatures (14°C) inhibited flower induction. No seed was produced at 30°C. Photoperiod had little effect on flowering, as compared with temperature. According to the photosynthetic performance of R. drepanensis, we can define this species as cold-adapted but also capable of acclimating to higher temperatures (30°C). Net photosynthesis at 250 μmol photons m−2 s−1 (P250) was maximal at 20°C (72 to 82 μg O2 g−1 afdw min−1). Photosynthetic plasticity allowed for high net production rates at 10°C (P250=65 to 68 μg O2 g−1 afdw min−1), independently of the temperature experienced during growth. At 30°C, however, net photosynthetic rates were lower in plants grown at 20°C than at 30°C (P250=6.5 and 55.9 μg O2 g−1 afdw min−1 respectively). The cold-adapted character of this Mediterranean endemism is finely tuned to the requirements of its winter–annual life cycle, while its acclimation capacity is suited to cope with the rapidly increasing temperatures along late spring in the temporary wetlands it inhabits.}}, 
+pages = {169--188}, 
+number = {2}, 
+volume = {60}, 
+keywords = {}
 }
