--- a/references/Habitat.bib
+++ b/references/Habitat.bib
@@ -34,36 +34,35 @@ ABSTRACT={Freshwater flows to estuaries shape habitat, transport nutrients to dr
 }
 
 @article{kim2013,
-title = {The effect of salinity on the germination of Ruppia tuberosa and Ruppia megacarpa and implications for the Coorong: A coastal lagoon of southern Australia},
-journal = {Aquatic Botany},
-volume = {111},
-pages = {81-88},
-year = {2013},
-issn = {0304-3770},
-doi = {https://doi.org/10.1016/j.aquabot.2013.06.008},
-url = {https://www.sciencedirect.com/science/article/pii/S0304377013000971},
-author = {D.H. Kim and K.T. Aldridge and J.D. Brookes and G.G. Ganf},
-keywords = {, , Turion, Germination, Coorong, Salinity},
-abstract = {This study examines the influence of salinity on the germination of Ruppia tuberosa J. Davis and Tomlinson (seeds and turions) and seeds of Ruppia megacarpa R. Mason. This information is used to demonstrate how freshwater riverine inputs maybe used to restore the probability of germination of Ruppia sp. in a major RAMSAR site, a coastal lagoon in South Australia (The Coorong) where salinity increases have been implicated as the major cause of the decline of Ruppia sp. a major food source for local and migratory water birds. Increased salinity led to a decrease in germination rates for R. tuberosa and R. megacarpa. The salinity thresholds for germination were 85–90g/L for R. tuberosa seeds, 120g/L for R. tuberosa turions and 30g/L for R. megacarpa seeds. An increase in salinity also led to an increase in mean time to germination of 15 days for R. tuberosa seeds (at 85g/L), 24 days for R. tuberosa turions (at 120g/L) and 10 days for R. megacarpa seeds (at 30g/L). Seeds of R. tuberosa that failed to germinate at elevated salinities germinated on transfer to low salinities at an enhanced rate compared with the initial rates. Turions of R. tuberosa did not respond in a similar manner because of ion toxicity after exposure to high salinities. This study suggests that salinity affects imbibition, inducing ion toxicities on seeds and turions, and consequently influences the germination process. Using recent elevated salinity levels of 40 to over 120g/L in the Coorong, modelling suggests that seed germination of R. tuberosa is likely to be restricted to the less saline northern half of the Coorong, but R. megacarpa germination is unlikely to occur. The modelling also suggests that riverine inputs that reduce salinity levels would restore R. tuberosa and R. megacarpa communities in the water-bodies where they were once abundant, but have declined in response to human induced salinisation.}
+year = {2013}, 
+title = {{The effect of salinity on the germination of Ruppia tuberosa and Ruppia megacarpa and implications for the Coorong: A coastal lagoon of southern Australia}}, 
+author = {Kim, D.H. and Aldridge, K.T. and Brookes, J.D. and Ganf, G.G.}, 
+journal = {Aquatic Botany}, 
+issn = {0304-3770}, 
+doi = {10.1016/j.aquabot.2013.06.008}, 
+abstract = {{This study examines the influence of salinity on the germination of Ruppia tuberosa J. Davis and Tomlinson (seeds and turions) and seeds of Ruppia megacarpa R. Mason. This information is used to demonstrate how freshwater riverine inputs maybe used to restore the probability of germination of Ruppia sp. in a major RAMSAR site, a coastal lagoon in South Australia (The Coorong) where salinity increases have been implicated as the major cause of the decline of Ruppia sp. a major food source for local and migratory water birds. Increased salinity led to a decrease in germination rates for R. tuberosa and R. megacarpa. The salinity thresholds for germination were 85–90g/L for R. tuberosa seeds, 120g/L for R. tuberosa turions and 30g/L for R. megacarpa seeds. An increase in salinity also led to an increase in mean time to germination of 15 days for R. tuberosa seeds (at 85g/L), 24 days for R. tuberosa turions (at 120g/L) and 10 days for R. megacarpa seeds (at 30g/L). Seeds of R. tuberosa that failed to germinate at elevated salinities germinated on transfer to low salinities at an enhanced rate compared with the initial rates. Turions of R. tuberosa did not respond in a similar manner because of ion toxicity after exposure to high salinities. This study suggests that salinity affects imbibition, inducing ion toxicities on seeds and turions, and consequently influences the germination process. Using recent elevated salinity levels of 40 to over 120g/L in the Coorong, modelling suggests that seed germination of R. tuberosa is likely to be restricted to the less saline northern half of the Coorong, but R. megacarpa germination is unlikely to occur. The modelling also suggests that riverine inputs that reduce salinity levels would restore R. tuberosa and R. megacarpa communities in the water-bodies where they were once abundant, but have declined in response to human induced salinisation.}}, 
+pages = {81--88}, 
+volume = {111}, 
+keywords = {}
 }
+
 @article{mccune2006,
-	title = {Non-parametric habitat models with automatic interactions},
-	author = {{McCune}, {Bruce}},
-	year = {2006},
-	month = {02},
-	date = {2006-02-24},
-	journal = {Journal of Vegetation Science},
-	pages = {819-830},
-	volume = {17},
-	number = {6},
-	doi = {10.1111/j.1654-1103.2006.tb02505.x},
-	url = {http://dx.doi.org/10.1111/j.1654-1103.2006.tb02505.x},
-	langid = {en}
+year = {2006}, 
+title = {{Non-parametric habitat models with automatic interactions}}, 
+author = {McCune, Bruce}, 
+journal = {Journal of Vegetation Science}, 
+issn = {1100-9233}, 
+doi = {10.1658/1100-9233(2006)17[819:nhmwai]2.0.co;2}, 
+abstract = {{Questions: Can a statistical model be designed to represent more directly the nature of organismal response to multiple interacting factors? Can multiplicative kernel smoothers be used for this purpose? What advantages does this approach have over more traditional habitat modelling methods? Methods: Non-parametric multiplicative regression (NPMR) was developed from the premises that: the response variable has a minimum of zero and a physiologically-determined maximum, species respond simultaneously to multiple ecological factors, the response to any one factor is conditioned by the values of other factors, and that if any of the factors is intolerable then the response is zero. Key features of NPMR are interactive effects of predictors, no need to specify an overall model form in advance, and built-in controls on overfitting. The effectiveness of the method is demonstrated with simulated and real data sets. Results: Empirical and theoretical relationships of species response to multiple interacting predictors can be represented effectively by multiplicative kernel smoothers. NPMR allows us to abandon simplistic assumptions about overall model form, while embracing the ecological truism that habitat factors interact.}}, 
+pages = {819--830}, 
+number = {6}, 
+volume = {17}, 
+keywords = {}
 }
 
 @article{brookes2009,
 	title = {An ecosystem assessment framework to guide management of the Coorong. Final report of the CLLAMMecology Research Cluster},
-	author = {{Brookes}, {JD//Lamontagne}},
+	author = {Brookes,J},
 	year = {2009},
 	date = {2009},
 	journal = {Canberra, CSIRO: Water for a Healthy Country National Research Flagship},
@@ -99,7 +98,7 @@ catalogue-url = { https://nla.gov.au/nla.cat-vn3884698 },
 }
 @report{ye2011,
 	title = {Coorong fish intervention monitoring during barrage releases in 2010/11},
-	author = {Ye, Q.,and Bucater, L.,and Short., D },
+	author = {Ye, Q. and Bucater, L. and Short, D. },
 	year = {2011},
 	journal = {South Australian Research and Development Institute (Aquatic Sciences), Adelaide. SARDI publication No. F2011/000309-1. SARDI Research Report Series},
 	volume = {559},
@@ -108,7 +107,7 @@ catalogue-url = { https://nla.gov.au/nla.cat-vn3884698 },
 }
 @report{ye2014,
 	title = {Monitoring the ecological responses to Commonwealth environmental water delivered to the Lower Murray River in 2012-13. Report 2, prepared for Commonwealth Environmental Water Office},
-author = {Ye, Q.,and J. Livore, and K. Aldridge,and T. Bradford,and B. Busch,and J. Earl,and M. Hipsey,and E. Hoffman,and K. Joehnk,and Z. Lorenz,and J. Nicol,and R. Oliver,and L. Suitor,and L. Tan,and R. Turner, and I. Wegner},
+author = {Ye, Q, and J. Livore, and K. Aldridge, and T. Bradford, and B. Busch, and J. Earl,and M. Hipsey, and E. Hoffman,and K. Joehnk,and Z. Lorenz, and J. Nicol,and R. Oliver,and L. Suitor,and L. Tan,and R. Turner, and I. Wegner},
 	year = {2014},
 	journal = {South Australian Research and Development Institute, Aquatic Sciences},
 	url = {https://www.awe.gov.au/sites/default/files/documents/ecological-response-monitoring-lower-murray-2012-13-report-2.pdf}
@@ -124,7 +123,7 @@ author = {Lewis, R and Waycott, M and O’Loughlin E J, and Urgl, C, and van Dij
 }
 @article{kim2015,
 	title = {Physicochemical influences on Ruppia tuberosa abundance and distribution mediated through life cycle stages},
-	author = {Kim, Daeheui and Aldridge, Kane T and Ganf, George G and Brookes, Justin D},
+	author = {Kim, Daeheui and Aldridge, Kane T. and Ganf, George G. and Brookes, Justin D.},
 	year = {2015},
 	month = {10},
 	date = {2015-10-01},
