--- a/appendix_b.Rmd
+++ b/appendix_b.Rmd
@@ -18,8 +18,6 @@ The validation plots including the statistics for each site are available via th
 
 ### GEN 2 {.unnumbered}
  
-HCHB *Generaton 2.0*
-
 ```{r A-testing3, echo=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
 library(kableExtra)
@@ -43,47 +41,7 @@ theSheet <- paste(
 theSheet <- str_split_fixed(theSheet, ',', 2)
 
 
-kbl(theSheet, caption = "Model results for Generation 2 nWV nSDG", align = "l",escape = F,col.names = c("Generation 2 2017 2022","Generation 2 2017 2022 (Transect)"), ) %>%
-row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
-  kable_styling(full_width = T,font_size = 10) %>%
-    scroll_box(fixed_thead = FALSE)
-```
-
-### GEN 0 {.unnumbered}
-
-HCHB *Generaton 0*
-
-```{r A-testing, echo=FALSE, message=FALSE, warning=FALSE}
-library(knitr)
-library(kableExtra)
-library(readxl)
-library(rmarkdown)
-theSheet_Names <- list.files(path = "HTML/Performance/GEN0/HTML", pattern = NULL, all.files = FALSE,
-           full.names = FALSE, recursive = FALSE,
-           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-theSheet <- paste("<",'a href="HTML/Performance/GEN0/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
-#theSheet <- append(theSheets,'Validation 2013 2016',0)
-kbl(theSheet, caption = "Model results for Generation 0", align = "l",escape = F,col.names = 'Generation 0 2013 2019', ) %>%
-row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
-  kable_styling(full_width = T,font_size = 10) %>%
-    scroll_box(fixed_thead = FALSE)
-```
-
-### GEN 1 {.unnumbered}
-
-HCHB *Generaton 1*
-
-```{r A-testing1, echo=FALSE, message=FALSE, warning=FALSE}
-library(knitr)
-library(kableExtra)
-library(readxl)
-library(rmarkdown)
-theSheet_Names <- list.files(path = "HTML/Performance/GEN1/HTML", pattern = NULL, all.files = FALSE,
-           full.names = FALSE, recursive = FALSE,
-           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-theSheet <- paste("<",'a href="HTML/Performance/GEN1/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
-#theSheet <- append(theSheets,'Validation 2019 2021',0)
-kbl(theSheet, caption = "Model results for Generation 1", align = "l",escape = F,col.names = 'Generation 1 2019 2021', ) %>%
+kbl(theSheet, caption = "Model results for GEN 2 nWV nSDG simulation (Generation 2 model without wave or dynamic sediment modules engaged.)", align = "l",escape = F,col.names = c("Generation 2  (TIME SERIES)","Generation 2 (TRANSECT)"), ) %>%
 row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
   kable_styling(full_width = T,font_size = 10) %>%
     scroll_box(fixed_thead = FALSE)
@@ -91,7 +49,6 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 ### GEN 1.5 {.unnumbered}
  
-HCHB *Generaton 1.5*
 
 ```{r A-testing2, echo=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
@@ -124,9 +81,49 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
     scroll_box(fixed_thead = FALSE)
 ```
 
+### GEN 1 {.unnumbered}
+
+
+```{r A-testing1, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet_Names <- list.files(path = "HTML/Performance/GEN1/HTML", pattern = NULL, all.files = FALSE,
+           full.names = FALSE, recursive = FALSE,
+           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
+theSheet <- paste("<",'a href="HTML/Performance/GEN1/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
+#theSheet <- append(theSheets,'Validation 2019 2021',0)
+kbl(theSheet, caption = "Model results for Generation 1", align = "l",escape = F,col.names = 'Generation 1 2019 2021', ) %>%
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = T,font_size = 10) %>%
+    scroll_box(fixed_thead = FALSE)
+```
+
+
+### GEN 0 {.unnumbered}
+
+
+```{r A-testing, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet_Names <- list.files(path = "HTML/Performance/GEN0/HTML", pattern = NULL, all.files = FALSE,
+           full.names = FALSE, recursive = FALSE,
+           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
+theSheet <- paste("<",'a href="HTML/Performance/GEN0/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
+#theSheet <- append(theSheets,'Validation 2013 2016',0)
+kbl(theSheet, caption = "Model results for Generation 0", align = "l",escape = F,col.names = 'Generation 0 2013 2019', ) %>%
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = T,font_size = 10) %>%
+    scroll_box(fixed_thead = FALSE)
+```
+
+
 ### MULTI {.unnumbered}
  
-HCHB *Model Comparisons*
+HCHB *Multiple Model Comparison*
 
 ```{r A-testing5, echo=FALSE, message=FALSE, warning=FALSE}
 
